tests/neg/i17981.scala
final final case class Foo() // error
